# event-radar

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  TASK-dogfood-smoke.md  TASK-event-detail-polish.md  TASK-watchlist-onboarding.md  TASK-wp7.md  TASK.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.mjs  skills-lock.json  tasks.md  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
docs/: ACTION-PLAN-DATA-QUALITY.md  ARCHITECTURE.md  CODEX-REVIEW-V2.md  DELIVERY.md  EVOLUTION-STRATEGY.md  FEED-STRATEGY.md  FRONTEND.md  HISTORICAL-DB-SPEC.md  IMPROVEMENT-PLAN.md  MARKET-REGIME-FACTORS.md  OBSERVABILITY.md  PHASE-2-PLAN.md  PHASE-3-PLAN.md  PHASE-3-SOLUTIONS.md  PHASE-4-PLAN.md  QA-PLAYBOOK.md  REFERENCES.md  REVIEW-CC-EVOLUTION.md  REVIEW-CC-FEED-STRATEGY.md  REVIEW-CODEX-EVOLUTION.md  REVIEW-CODEX-FEED-STRATEGY.md  REVIEW-PM.md  REVIEW-UX.md  REVIEW.md  ROADMAP-DATA-QUALITY.md  ROADMAP.md  SCANNERS.md  SOURCES.md  SPRINT-TRACKER.md  USER-APP-SPEC.md  VISION-AND-PLAN.md  VISION.md  WANWAN-REVIEW-V2.md  ai-observability-plan.md  ai-observability-rfc.md  analysis-cc.md  analysis-codex.md  ux-research-financial-alerts.md
docs/plans/: 2026-03-14-phase-0.md  (+10 more)
scripts/: run-vitest.mjs
services/sec-scanner/: Dockerfile  pyproject.toml
services/sec-scanner/sec_scanner/: app.py  config.py  edgar_client.py  form4_client.py  scanner.py
services/sec-scanner/tests/: test_app.py  test_edgar_client.py  test_form4_client.py  test_form4_scanner.py  test_scanner.py  test_seen_ids_persistence.py
(+81 files in other folders)
